--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vue/cli-plugin-eslint": "~5.0.0-rc.1",
     "@vue/cli-plugin-router": "~5.0.0-rc.1",
     "@vue/cli-service": "~5.0.0-rc.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
