--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview",
     "lint": "npm run eslint && npm run prettier",
     "eslint": "eslint --fix \"**/*.{vue,js,ts}\" || exit 0",
-    "prettier": "prettier --write \"**/*.{vue,js,ts,json}\""
+    "prettier": "prettier --write \"**/*.{vue,js,ts,json}\"",
+    "deploy": "npm run build && firebase deploy --only hosting"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
