--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@vueuse/core": "^7.6.2",
     "firebase": "^9.6.7",
+    "mitt": "^3.0.0",
     "pinia": "^2.0.11",
     "vanta": "^0.5.21",
     "vue": "^3.2.25",
