--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "npm run eslint && npm run prettier",
     "eslint": "eslint --fix \"**/*.{vue,js,ts}\" || exit 0",
     "prettier": "prettier --write \"**/*.{vue,js,ts,json}\"",
-    "deploy": "npm run build && firebase deploy --only hosting"
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
